// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hubs is false 1`] = `""`;

exports[`loading is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start padding_top extra_padding"
>
  <div
    className="margin_box_right layout-row flex-100 layout-align-center-stretch margin_bottom"
  >
    <div
      className="layout-row flex layout-align-space-between-center title_shipment_grey"
    >
      <p
        className="layout-align-start-center layout-row"
      >
        Ref
        :  
        <span />
      </p>
      <p
        className="layout-row layout-align-end-end"
      >
        <strong>
          Placed at
          : 
        </strong>
         
        19
      </p>
    </div>
    <div
      className="layout-row flex-15 flex-md-15 flex-sm-20 flex-xs-25 layout-align-center-center pointy shipment_view_margin_buffer  reuse_shipment_box"
      onClick={[Function]}
      style="#333"
    >
      <p
        className="layout-align-center-center layout-row"
      >
        Reuse Shipment
      </p>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start padding_top"
  >
    <Connect(UserShipmentContent)
      background={
        Object {
          "bg1": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/crane_sm.jpg\\")",
          },
          "bg2": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/destination_sm.jpg\\")",
          },
        }
      }
      cargoView={Array []}
      deselectedStyle={
        Object {
          "0": "#",
          "1": "D",
          "2": "C",
          "3": "D",
          "4": "B",
          "5": "D",
          "6": "C",
        }
      }
      estimatedTimes={
        Object {
          "etaJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
          "etdJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
        }
      }
      feeHash={
        Object {
          "cargo": Object {},
          "total": Object {
            "value": 77,
          },
        }
      }
      gradientBorderStyle="#333"
      gradientStyle="#333"
      match={
        Object {
          "params": Object {},
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      selectedStyle="#333"
      shipmentData={
        Object {
          "addresses": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "cargoItems": Array [],
          "contacts": Array [],
          "containers": Array [],
          "documents": Array [],
          "schedules": Array [
            Object {
              "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
              "mode_of_transport": "ocean",
            },
            Object {
              "hub_route_key": "AIR_HUB_ROUTE_KEY",
              "mode_of_transport": "air",
            },
            Object {
              "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
              "mode_of_transport": "truck",
            },
            Object {
              "hub_route_key": "RAIL_HUB_ROUTE_KEY",
              "mode_of_transport": "rail",
            },
          ],
          "shipment": Object {
            "cargo_count": 1,
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "load_type": "OCEAN_LOAD_TYPE",
            "notes": "FOO_NOTES",
            "planned_eta": "2018-12-01T12:14:08+01:00",
            "planned_etd": "2018-11-12T12:14:08+01:00",
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "total": Object {
                "value": 77,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
            "trucking": Object {
              "on_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
          },
        }
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
        }
      }
      userDispatch={
        Object {
          "deleteDocument": [Function],
        }
      }
    />
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-center-center"
        style={
          Object {
            "paddingTop": "30px",
          }
        }
      >
        <p
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "paddingBottom": "14px",
              "textAlign": "center",
            }
          }
        >
          Download shipment pdf
        </p>
        <Connect(DocumentsDownloader)
          options={
            Object {
              "shipment": Object {
                "cargo_count": 1,
                "cargo_notes": "FOO_CARGO_NOTES",
                "eori": 1234,
                "has_on_carriage": false,
                "has_pre_carriage": false,
                "incoterm_text": "FOO_INCOTERM_TEXT",
                "load_type": "OCEAN_LOAD_TYPE",
                "notes": "FOO_NOTES",
                "planned_eta": "2018-12-01T12:14:08+01:00",
                "planned_etd": "2018-11-12T12:14:08+01:00",
                "schedules_charges": Object {
                  "AIR_HUB_ROUTE_KEY": Object {
                    "total": 200,
                  },
                  "OCEAN_HUB_ROUTE_KEY": Object {
                    "total": 40,
                  },
                  "RAIL_HUB_ROUTE_KEY": Object {
                    "total": 125,
                  },
                  "TRUCK_HUB_ROUTE_KEY": Object {
                    "total": 75,
                  },
                },
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "total_goods_value": Object {
                  "currency": "USD",
                  "value": 15,
                },
                "total_price": Object {
                  "currency": "USD",
                  "value": 12,
                },
                "trucking": Object {
                  "on_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                  "pre_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                },
              },
            }
          }
          size="full"
          t={[Function]}
          target="shipment_recap"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start padding_top extra_padding"
>
  <div
    className="margin_box_right layout-row flex-100 layout-align-center-stretch margin_bottom"
  >
    <div
      className="layout-row flex layout-align-space-between-center title_shipment_grey"
    >
      <p
        className="layout-align-start-center layout-row"
      >
        Ref
        :  
        <span />
      </p>
      <p
        className="layout-row layout-align-end-end"
      >
        <strong>
          Placed at
          : 
        </strong>
         
        19
      </p>
    </div>
    <div
      className="layout-row flex-15 flex-md-15 flex-sm-20 flex-xs-25 layout-align-center-center pointy shipment_view_margin_buffer  reuse_shipment_box"
      onClick={[Function]}
      style="#333"
    >
      <p
        className="layout-align-center-center layout-row"
      >
        Reuse Shipment
      </p>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start padding_top"
  >
    <Connect(UserShipmentContent)
      background={
        Object {
          "bg1": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/crane_sm.jpg\\")",
          },
          "bg2": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/destination_sm.jpg\\")",
          },
        }
      }
      cargoView={Array []}
      deselectedStyle={
        Object {
          "0": "#",
          "1": "D",
          "2": "C",
          "3": "D",
          "4": "B",
          "5": "D",
          "6": "C",
        }
      }
      estimatedTimes={
        Object {
          "etaJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
          "etdJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
        }
      }
      feeHash={
        Object {
          "cargo": Object {},
          "total": Object {
            "value": 77,
          },
        }
      }
      gradientBorderStyle="#333"
      gradientStyle="#333"
      match={
        Object {
          "params": Object {},
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      selectedStyle="#333"
      shipmentData={
        Object {
          "addresses": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "cargoItems": Array [],
          "contacts": Array [],
          "containers": Array [],
          "documents": Array [],
          "schedules": Array [
            Object {
              "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
              "mode_of_transport": "ocean",
            },
            Object {
              "hub_route_key": "AIR_HUB_ROUTE_KEY",
              "mode_of_transport": "air",
            },
            Object {
              "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
              "mode_of_transport": "truck",
            },
            Object {
              "hub_route_key": "RAIL_HUB_ROUTE_KEY",
              "mode_of_transport": "rail",
            },
          ],
          "shipment": Object {
            "cargo_count": 1,
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "load_type": "OCEAN_LOAD_TYPE",
            "notes": "FOO_NOTES",
            "planned_eta": "2018-12-01T12:14:08+01:00",
            "planned_etd": "2018-11-12T12:14:08+01:00",
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "total": Object {
                "value": 77,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
            "trucking": Object {
              "on_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
          },
        }
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
        }
      }
      userDispatch={
        Object {
          "deleteDocument": [Function],
        }
      }
    />
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-center-center"
        style={
          Object {
            "paddingTop": "30px",
          }
        }
      >
        <p
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "paddingBottom": "14px",
              "textAlign": "center",
            }
          }
        >
          Download shipment pdf
        </p>
        <Connect(DocumentsDownloader)
          options={
            Object {
              "shipment": Object {
                "cargo_count": 1,
                "cargo_notes": "FOO_CARGO_NOTES",
                "eori": 1234,
                "has_on_carriage": false,
                "has_pre_carriage": false,
                "incoterm_text": "FOO_INCOTERM_TEXT",
                "load_type": "OCEAN_LOAD_TYPE",
                "notes": "FOO_NOTES",
                "planned_eta": "2018-12-01T12:14:08+01:00",
                "planned_etd": "2018-11-12T12:14:08+01:00",
                "schedules_charges": Object {
                  "AIR_HUB_ROUTE_KEY": Object {
                    "total": 200,
                  },
                  "OCEAN_HUB_ROUTE_KEY": Object {
                    "total": 40,
                  },
                  "RAIL_HUB_ROUTE_KEY": Object {
                    "total": 125,
                  },
                  "TRUCK_HUB_ROUTE_KEY": Object {
                    "total": 75,
                  },
                },
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "total_goods_value": Object {
                  "currency": "USD",
                  "value": 15,
                },
                "total_price": Object {
                  "currency": "USD",
                  "value": 12,
                },
                "trucking": Object {
                  "on_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                  "pre_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                },
              },
            }
          }
          size="full"
          t={[Function]}
          target="shipment_recap"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shipmentData.cargoItems is present 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start padding_top extra_padding"
>
  <div
    className="margin_box_right layout-row flex-100 layout-align-center-stretch margin_bottom"
  >
    <div
      className="layout-row flex layout-align-space-between-center title_shipment_grey"
    >
      <p
        className="layout-align-start-center layout-row"
      >
        Ref
        :  
        <span />
      </p>
      <p
        className="layout-row layout-align-end-end"
      >
        <strong>
          Placed at
          : 
        </strong>
         
        19
      </p>
    </div>
    <div
      className="layout-row flex-15 flex-md-15 flex-sm-20 flex-xs-25 layout-align-center-center pointy shipment_view_margin_buffer  reuse_shipment_box"
      onClick={[Function]}
      style="#333"
    >
      <p
        className="layout-align-center-center layout-row"
      >
        Reuse Shipment
      </p>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start padding_top"
  >
    <Connect(UserShipmentContent)
      background={
        Object {
          "bg1": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/crane_sm.jpg\\")",
          },
          "bg2": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/destination_sm.jpg\\")",
          },
        }
      }
      cargoView={
        Array [
          <CargoItemGroup
            group={
              Object {
                "cargoType": "FOO_CARGO_TYPE",
                "cargo_group_id": 0,
                "chargeable_weight": NaN,
                "dimension_x": NaN,
                "dimension_y": NaN,
                "dimension_z": NaN,
                "groupAlias": 1,
                "hsCodes": undefined,
                "hsText": undefined,
                "items": Array [],
                "payload_in_kg": NaN,
                "quantity": 1,
                "volume": NaN,
              }
            }
            shipment={Object {}}
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />,
          <CargoItemGroup
            group={
              Object {
                "cargoType": "BAR_CARGO_TYPE",
                "cargo_group_id": 1,
                "chargeable_weight": NaN,
                "dimension_x": NaN,
                "dimension_y": NaN,
                "dimension_z": NaN,
                "groupAlias": 2,
                "hsCodes": undefined,
                "hsText": undefined,
                "items": Array [],
                "payload_in_kg": NaN,
                "quantity": 1,
                "volume": NaN,
              }
            }
            shipment={Object {}}
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />,
        ]
      }
      deselectedStyle={
        Object {
          "0": "#",
          "1": "D",
          "2": "C",
          "3": "D",
          "4": "B",
          "5": "D",
          "6": "C",
        }
      }
      estimatedTimes={
        Object {
          "etaJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
          "etdJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
        }
      }
      feeHash={
        Object {
          "cargo": Object {},
          "total": Object {
            "value": 77,
          },
        }
      }
      gradientBorderStyle="#333"
      gradientStyle="#333"
      match={
        Object {
          "params": Object {},
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      selectedStyle="#333"
      shipmentData={
        Object {
          "addresses": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "cargoItemTypes": Object {
            "bar": "BAR_CARGO_TYPE",
            "foo": "FOO_CARGO_TYPE",
          },
          "cargoItems": Array [
            Object {
              "cargo_item_type_id": "foo",
              "id": 0,
            },
            Object {
              "cargo_item_type_id": "bar",
              "id": 1,
            },
          ],
          "contacts": Array [],
          "containers": Array [],
          "documents": Array [],
          "schedules": Array [
            Object {
              "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
              "mode_of_transport": "ocean",
            },
            Object {
              "hub_route_key": "AIR_HUB_ROUTE_KEY",
              "mode_of_transport": "air",
            },
            Object {
              "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
              "mode_of_transport": "truck",
            },
            Object {
              "hub_route_key": "RAIL_HUB_ROUTE_KEY",
              "mode_of_transport": "rail",
            },
          ],
          "shipment": Object {
            "cargo_count": 1,
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "load_type": "OCEAN_LOAD_TYPE",
            "notes": "FOO_NOTES",
            "planned_eta": "2018-12-01T12:14:08+01:00",
            "planned_etd": "2018-11-12T12:14:08+01:00",
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "total": Object {
                "value": 77,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
            "trucking": Object {
              "on_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
          },
        }
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
        }
      }
      userDispatch={
        Object {
          "deleteDocument": [Function],
        }
      }
    />
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-center-center"
        style={
          Object {
            "paddingTop": "30px",
          }
        }
      >
        <p
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "paddingBottom": "14px",
              "textAlign": "center",
            }
          }
        >
          Download shipment pdf
        </p>
        <Connect(DocumentsDownloader)
          options={
            Object {
              "shipment": Object {
                "cargo_count": 1,
                "cargo_notes": "FOO_CARGO_NOTES",
                "eori": 1234,
                "has_on_carriage": false,
                "has_pre_carriage": false,
                "incoterm_text": "FOO_INCOTERM_TEXT",
                "load_type": "OCEAN_LOAD_TYPE",
                "notes": "FOO_NOTES",
                "planned_eta": "2018-12-01T12:14:08+01:00",
                "planned_etd": "2018-11-12T12:14:08+01:00",
                "schedules_charges": Object {
                  "AIR_HUB_ROUTE_KEY": Object {
                    "total": 200,
                  },
                  "OCEAN_HUB_ROUTE_KEY": Object {
                    "total": 40,
                  },
                  "RAIL_HUB_ROUTE_KEY": Object {
                    "total": 125,
                  },
                  "TRUCK_HUB_ROUTE_KEY": Object {
                    "total": 75,
                  },
                },
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "total_goods_value": Object {
                  "currency": "USD",
                  "value": 15,
                },
                "total_price": Object {
                  "currency": "USD",
                  "value": 12,
                },
                "trucking": Object {
                  "on_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                  "pre_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                },
              },
            }
          }
          size="full"
          t={[Function]}
          target="shipment_recap"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shipmentData.contacts is present 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start padding_top extra_padding"
>
  <div
    className="margin_box_right layout-row flex-100 layout-align-center-stretch margin_bottom"
  >
    <div
      className="layout-row flex layout-align-space-between-center title_shipment_grey"
    >
      <p
        className="layout-align-start-center layout-row"
      >
        Ref
        :  
        <span />
      </p>
      <p
        className="layout-row layout-align-end-end"
      >
        <strong>
          Placed at
          : 
        </strong>
         
        19
      </p>
    </div>
    <div
      className="layout-row flex-15 flex-md-15 flex-sm-20 flex-xs-25 layout-align-center-center pointy shipment_view_margin_buffer  reuse_shipment_box"
      onClick={[Function]}
      style="#333"
    >
      <p
        className="layout-align-center-center layout-row"
      >
        Reuse Shipment
      </p>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start padding_top"
  >
    <Connect(UserShipmentContent)
      background={
        Object {
          "bg1": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/crane_sm.jpg\\")",
          },
          "bg2": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/destination_sm.jpg\\")",
          },
        }
      }
      cargoView={Array []}
      deselectedStyle={
        Object {
          "0": "#",
          "1": "D",
          "2": "C",
          "3": "D",
          "4": "B",
          "5": "D",
          "6": "C",
        }
      }
      estimatedTimes={
        Object {
          "etaJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
          "etdJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
        }
      }
      feeHash={
        Object {
          "cargo": Object {},
          "total": Object {
            "value": 77,
          },
        }
      }
      gradientBorderStyle="#333"
      gradientStyle="#333"
      match={
        Object {
          "params": Object {},
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      selectedStyle="#333"
      shipmentData={
        Object {
          "addresses": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "cargoItems": Array [],
          "contacts": Array [
            Object {
              "contact": Object {
                "first_name": "FOO_FIRST_NAME",
                "last_name": "FOO_LAST_NAME",
              },
              "type": "notifyee",
            },
            Object {
              "address": Object {
                "city": "FOO_CITY",
                "country": "Germany",
                "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                "id": 246,
                "primary": true,
                "street": "FOO_STREET",
                "streetNumber": 579,
                "street_number": 579,
                "zipCode": "22456",
                "zip_code": "22456",
              },
              "contact": Object {
                "first_name": "BAR_FIRST_NAME",
                "last_name": "BAR_LAST_NAME",
              },
              "type": "shipper",
            },
            Object {
              "address": Object {
                "city": "FOO_CITY",
                "country": "Germany",
                "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                "id": 246,
                "primary": true,
                "street": "FOO_STREET",
                "streetNumber": 579,
                "street_number": 579,
                "zipCode": "22456",
                "zip_code": "22456",
              },
              "contact": Object {
                "first_name": "BAZ_FIRST_NAME",
                "last_name": "BAZ_LAST_NAME",
              },
              "type": "consignee",
            },
          ],
          "containers": Array [],
          "documents": Array [],
          "schedules": Array [
            Object {
              "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
              "mode_of_transport": "ocean",
            },
            Object {
              "hub_route_key": "AIR_HUB_ROUTE_KEY",
              "mode_of_transport": "air",
            },
            Object {
              "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
              "mode_of_transport": "truck",
            },
            Object {
              "hub_route_key": "RAIL_HUB_ROUTE_KEY",
              "mode_of_transport": "rail",
            },
          ],
          "shipment": Object {
            "cargo_count": 1,
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "load_type": "OCEAN_LOAD_TYPE",
            "notes": "FOO_NOTES",
            "planned_eta": "2018-12-01T12:14:08+01:00",
            "planned_etd": "2018-11-12T12:14:08+01:00",
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "total": Object {
                "value": 77,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
            "trucking": Object {
              "on_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
          },
        }
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
        }
      }
      userDispatch={
        Object {
          "deleteDocument": [Function],
        }
      }
    />
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-center-center"
        style={
          Object {
            "paddingTop": "30px",
          }
        }
      >
        <p
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "paddingBottom": "14px",
              "textAlign": "center",
            }
          }
        >
          Download shipment pdf
        </p>
        <Connect(DocumentsDownloader)
          options={
            Object {
              "shipment": Object {
                "cargo_count": 1,
                "cargo_notes": "FOO_CARGO_NOTES",
                "eori": 1234,
                "has_on_carriage": false,
                "has_pre_carriage": false,
                "incoterm_text": "FOO_INCOTERM_TEXT",
                "load_type": "OCEAN_LOAD_TYPE",
                "notes": "FOO_NOTES",
                "planned_eta": "2018-12-01T12:14:08+01:00",
                "planned_etd": "2018-11-12T12:14:08+01:00",
                "schedules_charges": Object {
                  "AIR_HUB_ROUTE_KEY": Object {
                    "total": 200,
                  },
                  "OCEAN_HUB_ROUTE_KEY": Object {
                    "total": 40,
                  },
                  "RAIL_HUB_ROUTE_KEY": Object {
                    "total": 125,
                  },
                  "TRUCK_HUB_ROUTE_KEY": Object {
                    "total": 75,
                  },
                },
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "total_goods_value": Object {
                  "currency": "USD",
                  "value": 15,
                },
                "total_price": Object {
                  "currency": "USD",
                  "value": 12,
                },
                "trucking": Object {
                  "on_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                  "pre_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                },
              },
            }
          }
          size="full"
          t={[Function]}
          target="shipment_recap"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shipmentData.documents is present 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start padding_top extra_padding"
>
  <div
    className="margin_box_right layout-row flex-100 layout-align-center-stretch margin_bottom"
  >
    <div
      className="layout-row flex layout-align-space-between-center title_shipment_grey"
    >
      <p
        className="layout-align-start-center layout-row"
      >
        Ref
        :  
        <span />
      </p>
      <p
        className="layout-row layout-align-end-end"
      >
        <strong>
          Placed at
          : 
        </strong>
         
        19
      </p>
    </div>
    <div
      className="layout-row flex-15 flex-md-15 flex-sm-20 flex-xs-25 layout-align-center-center pointy shipment_view_margin_buffer  reuse_shipment_box"
      onClick={[Function]}
      style="#333"
    >
      <p
        className="layout-align-center-center layout-row"
      >
        Reuse Shipment
      </p>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start padding_top"
  >
    <Connect(UserShipmentContent)
      background={
        Object {
          "bg1": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/crane_sm.jpg\\")",
          },
          "bg2": Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/destination_sm.jpg\\")",
          },
        }
      }
      cargoView={Array []}
      deselectedStyle={
        Object {
          "0": "#",
          "1": "D",
          "2": "C",
          "3": "D",
          "4": "B",
          "5": "D",
          "6": "C",
        }
      }
      estimatedTimes={
        Object {
          "etaJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
          "etdJSX": <p
            className="flex-none letter_3 date"
          >
            19
          </p>,
        }
      }
      feeHash={
        Object {
          "cargo": Object {},
          "total": Object {
            "value": 77,
          },
        }
      }
      gradientBorderStyle="#333"
      gradientStyle="#333"
      match={
        Object {
          "params": Object {},
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      selectedStyle="#333"
      shipmentData={
        Object {
          "addresses": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "cargoItems": Array [],
          "contacts": Array [],
          "containers": Array [],
          "documents": Array [
            Object {
              "doc_type": "foo",
              "id": 0,
            },
            Object {
              "doc_type": "bar",
              "id": 1,
            },
          ],
          "schedules": Array [
            Object {
              "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
              "mode_of_transport": "ocean",
            },
            Object {
              "hub_route_key": "AIR_HUB_ROUTE_KEY",
              "mode_of_transport": "air",
            },
            Object {
              "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
              "mode_of_transport": "truck",
            },
            Object {
              "hub_route_key": "RAIL_HUB_ROUTE_KEY",
              "mode_of_transport": "rail",
            },
          ],
          "shipment": Object {
            "cargo_count": 1,
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "load_type": "OCEAN_LOAD_TYPE",
            "notes": "FOO_NOTES",
            "planned_eta": "2018-12-01T12:14:08+01:00",
            "planned_etd": "2018-11-12T12:14:08+01:00",
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "total": Object {
                "value": 77,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
            "trucking": Object {
              "on_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
          },
        }
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
        }
      }
      userDispatch={
        Object {
          "deleteDocument": [Function],
        }
      }
    />
    <div
      className="flex-100 layout-row layout-wrap"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-center-center"
        style={
          Object {
            "paddingTop": "30px",
          }
        }
      >
        <p
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "paddingBottom": "14px",
              "textAlign": "center",
            }
          }
        >
          Download shipment pdf
        </p>
        <Connect(DocumentsDownloader)
          options={
            Object {
              "shipment": Object {
                "cargo_count": 1,
                "cargo_notes": "FOO_CARGO_NOTES",
                "eori": 1234,
                "has_on_carriage": false,
                "has_pre_carriage": false,
                "incoterm_text": "FOO_INCOTERM_TEXT",
                "load_type": "OCEAN_LOAD_TYPE",
                "notes": "FOO_NOTES",
                "planned_eta": "2018-12-01T12:14:08+01:00",
                "planned_etd": "2018-11-12T12:14:08+01:00",
                "schedules_charges": Object {
                  "AIR_HUB_ROUTE_KEY": Object {
                    "total": 200,
                  },
                  "OCEAN_HUB_ROUTE_KEY": Object {
                    "total": 40,
                  },
                  "RAIL_HUB_ROUTE_KEY": Object {
                    "total": 125,
                  },
                  "TRUCK_HUB_ROUTE_KEY": Object {
                    "total": 75,
                  },
                },
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "total_goods_value": Object {
                  "currency": "USD",
                  "value": 15,
                },
                "total_price": Object {
                  "currency": "USD",
                  "value": 12,
                },
                "trucking": Object {
                  "on_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                  "pre_carriage": Object {
                    "trucking_time_in_seconds": 55,
                  },
                },
              },
            }
          }
          size="full"
          t={[Function]}
          target="shipment_recap"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
